# kmers2kff

./: Cargo.toml  Readme.md
.github/workflows/: main.yml
src/: bucket.rs  cli.rs  error.rs  main.rs  seq2bits.rs
tests/: run.rs  test.kff
tests/data/: test.csv
