[package]
name = "kmers2kff"
version = "0.1.0"
authors = ["Pierre Marijon <pierre.marijon@hhu.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kff        = {git = "https://github.com/Kmer-File-Format/kff-rust-api.git"}
fasthash   = "0.4"
csv	   = "1"

# CLI
clap       = "3.0.0-beta.2"

# Logging and error management
log 	   = "0.4"
anyhow     = "1"
thiserror  = "1"
env_logger = "0.7"